--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "meme-governance-frontend",
   "version": "1.0.0",
+  "homepage": "https://meme-governance.axlabs.com",
   "scripts": {
     "dev": "next --port 8080",
     "build": "next build",
@@ -8,16 +9,19 @@
     "build-stats": "ANALYZE=true npm run build",
     "export": "next export -o dist",
     "build-prod": "run-s clean build export",
+    "predeploy": "run-s build-prod",
+    "deploy": "gh-pages -d dist",
     "clean": "rimraf .next dist",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "bs58check": "^2.1.2",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.2.0",
     "next": "^10.1.2",
     "next-seo": "^4.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "bs58check": "^2.1.2",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
