change github actions [3]

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 12.x
       - name: npm install
         run: npm ci
-      - name: Deploy with gh-pages
+      - name: Build & Deploy with gh-pages
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git config --global user.email "info@axlabs.com"
