--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
-    "bs58check": "^2.1.2",
+    "@cityofzion/neon-js": "^5.0.0-next.10",
     "classnames": "^2.2.6",
     "next": "^10.1.2",
     "next-seo": "^4.23.0",
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^10.1.2",
     "@tailwindcss/jit": "^0.1.18",
-    "@types/bs58check": "^2.1.0",
     "@types/classnames": "^2.2.11",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
