--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@cityofzion/neon-js": "^5.0.0-next.10",
     "classnames": "^2.2.6",
+    "js-sha256": "^0.9.0",
     "next": "^10.1.2",
     "next-seo": "^4.23.0",
     "react": "^17.0.2",
