--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "predeploy": "run-s build-prod",
     "deploy": "gh-pages -d dist",
     "clean": "rimraf .next dist",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "prettier:format": "prettier --write src/**/*",
+    "prettier:check": "prettier -c src/**/*"
   },
   "dependencies": {
     "@cityofzion/neon-js": "^5.0.0-next.10",
@@ -55,8 +57,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
       "eslint --fix",
+      "prettier --write src/**/*",
       "eslint"
     ],
     "*.json": [
