--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-seo": "^4.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.1.2",
